--- a/report/text/requirementsOfMom.tex
+++ b/report/text/requirementsOfMom.tex
@@ -12,7 +12,7 @@ In the analysis we came to the conclusion that the following items is necessary 
 The first item is called controller in this system, the second is the tag and the last is the website on the computer. But also new components of the system is necessary. 
 As the expanding of the rule concept went on, it became apparent that some of the rules needed to be handled automatically when the conditions held. For this a daemon can be used, and in our case it was.\\
 \\
-Also during the following sections we find that a web service is needed. 
+Also during the following sections it was found that a web service is needed. 
 
 In the following sections the specification of the website, controller and tag, web service and daemon will be explained, before the design and implementation will be presented for each of them in the following chapters.  
 
