--- a/report/text/hardware2.tex
+++ b/report/text/hardware2.tex
@@ -1,6 +1,6 @@
 \chapter{Hardware}
 \label{chap:hardware}
-In this section the hardware choices of this project will be talked about and analyzed. First the choice of hardware platform will be discussed, next the choice of hardware identification needed for the system and then the server setup. Followed each by a conclusion stating the hardware chosen.
+In this section the hardware choices of this project will be talked about and analyzed. First the choice of hardware platform will be discussed, next the choice of hardware identification needed for the system and then the server setup. Followed each by a conclusion stating the chosen option.
 
 \section{Hardware Platform}
 \label{HardwarePlatform}
@@ -11,17 +11,17 @@ Arduino development boards come in a few variations, but common among all but on
 
 
 \subsubsection{Teensy}
-Teensy, like Arduino is based on a Atmel microcontroller, but unlike Arduino is made to be as small as possible. Teensy also supplies an add-on library that makes Arduino programs compatible. Power is also supplied via USB instead of a dedicated power input on the Arduino, which also makes it cheaper. Teensy also does not have an equivalent of shields.\citep{teensyPJRC}
+Teensy, like Arduino is based on a Atmel microcontroller, but unlike Arduino is made to be as small as possible. Teensy also supplies an add-on library that makes Arduino programs compatible. Power is supplied via USB instead of a dedicated power input on the Arduino, which makes it cheaper. Teensy does not have an equivalent of shields.\citep{teensyPJRC}
 
 
 \subsubsection{Raspberry Pi}
-Raspberry Pi, unlike Arduino and Teensy uses a ``full-sized'' ARM processor, which makes it more like a regular computer than a microcontroller. Despite that it has GPI/O pins just like Arduino and Teensy, which means that it has the capabilities needed for the project. Being ARM based means that the Raspberry Pi can also install computer operating systems such as Linux based operating systems. The ARM processor is also many times more powerful than the Atmel microcontrollers. This however comes with negatives such as more power consumption, unused modules(GPU, sound or SD card storage) resulting in a larger board and a higher cost. \citep{raspberrypi}
+Raspberry Pi, unlike Arduino and Teensy, uses a ``full-sized'' ARM processor, which makes it more like a regular computer than a microcontroller. Despite that it has GPI/O pins just like Arduino and Teensy, which means that it has the capabilities needed for the project. Being ARM based means that the Raspberry Pi can also install operating systems such as Linux based operating systems. The ARM processor is also many times more powerful than the Atmel microcontrollers. This however comes with negatives such as higher power consumption, unused modules(GPU, sound or SD card storage) resulting in a larger board and a higher cost. \citep{raspberrypi}
 
 \subsection{Conclusion - Platform}
-In conclusion the platform chosen is Arduino. Arduino is chosen because the university already has those development boards, which means that no time is wasted getting another platform approved and bought. Arduino is also chosen because of their shield design, which enables the use of a Ethernet shield as well as a RFID shield. Some of the group members has also already worked with Arduino, which means a lower learning curve.
+In conclusion the platform chosen is Arduino. Arduino is chosen because of their shield design, which enables the use of a Ethernet shield as well as a RFID shield. Some of the group members has also already worked with Arduino, which means a lower learning curve.
 
 \section{Hardware Identification}
-In order for the person using the system to identify themselves, there has to be some form of hardware identification. This hardware identification has to be unique for that person, so that the system can find out the allowed time of he can use on the media. Several factors have to be considered when choosing what hardware identification method to use, such as cost, user friendliness and security. Following is a comparison between some of the hardware identification methods available.
+In order for the person using the system to identify themselves, there has to be some form of hardware identification. This hardware identification has to be unique for that person, so that the system can calculate the allowed time the user can use on that media. Several factors have to be considered when choosing what hardware identification method to use, such as cost, user friendliness and security. Following is a comparison between some of the hardware identification methods available.
 
 \subsubsection{RFID}
 RFID, short for Radio-frequency Identification, is a method of using either passive or active tags for transferring data between a reader and a tag. A tag is an embedded chip with an antenna, that when receiving power transmits the data on the chip to any readers within range. Active tags have their own power source and thus can be scaled to emit their data over long distances. Passive tags on the other hand do not have an internal power source, and instead is powered by the reader via magnetic fields. This makes passive tags work on smaller ranges.\citep{rfidAndNfc} A tag can be compared to a bar code, with the difference being that tags scale much better when needing more data storage and the tag does not have to be visible, i.e. it can be embedded into for example key-cards, jewelry and such.
@@ -29,7 +29,7 @@ RFID, short for Radio-frequency Identification, is a method of using either pass
 \subsubsection{NFC}
 NFC, short for Near Field Communication, is a set of standards for the same technology that RFID uses. The differences between them is that NFC is a strict standard, uses only passive tags and only works over small distances.\citep{rfidAndNfc} NFC is also the technology being embedded in smartphones, which means that the projects system could be made compatible with apps.\\
 \\
-We also considered fingerprints and iris recognition, but dismissed these solution based on pricing and the fact that the human body changes a lot during the first 20 years of life.\citep{irisid}
+We also considered fingerprints and iris recognition, but dismissed these solutions based on pricing and the fact that the human body changes a lot during the first 20 years of life.\citep{irisid}
 %\subsubsection{Fingerprint}\fixme{kilde}
 %Fingerprint is a method of recognizing whether a persons fingerprint matches another already scanned fingerprint. A number of technologies can be used to scan a persons fingerprint, such as optical and ultrasonic. An algorithm is also needed to compare certain features of the fingerprint in order to be able to compare between fingerprints \citep{irisid}. One of the advantages of fingerprint is that the only equipment needed is the scanner and something to compare them, this means that the cost could be kept down. Fingerprints also have some disadvantages. One of the disadvantages is gathering the fingerprints of all family members where as other methods can be established by on person will fingerprints require all members are involved in the setup process. Another disadvantage is that it has been shown that children fingerprint change over time as they grow up, which could mean that the fingerprint has to be scanned again after a while. Fingerprints is also characterized as personal information and therefore need extra security measures. 
 
@@ -39,11 +39,11 @@ We also considered fingerprints and iris recognition, but dismissed these soluti
 
 \subsection{Conclusion - Identification}
 In conclusion the identification chosen is RFID, because it could be provided by the university, however, originally NFC was preferred. 
-The RFID has been chosen because it is easily accessible, and all of the practices used with RFID can be translated onto NFC. The reason for choosing NFC over RFID, is that it is a well defined standard, it is compatible with the technology used in smartphones and it is short range so no accidental reads happen. The reason for choosing NFC/RFID over fingerprint is that the security needed for fingerprints do not scale with simplicity and the possibility of a child's fingerprint changing too much. The reason for choosing NFC/RFID over iris is primarily the cost, as the cost of a high quality camera is too high since multiple cameras would be needed.
+The RFID has been chosen because it is easily accessible, and all of the practices used with RFID can be used with NFC. The reason for choosing NFC over RFID, is that it is a well defined standard, it is compatible with the technology used in smartphones and it is short range so no accidental reads happen. The reason for choosing NFC/RFID over fingerprint is that the security needed for fingerprints do not scale with simplicity and the possibility of a child's fingerprint changing too much. The reason for choosing NFC/RFID over iris is primarily the cost, as the cost of a high quality camera is too high since multiple cameras would be needed.
 
 \section{Servers}
-In order to maintain the wast amount of information collected from the users and in order to offer a graphical interface to add rules, permissions and chores to the system a server setup will be needed.\\
-Such server work can be done from a private home or collected global server, maintained by the manufacturer of the system.\\
+In order to maintain the wast amount of information collected from the users and in order to offer a graphical interface to add rules, permissions and chores to the system a server setup is needed.\\
+Such server work can be done from a private home or centralized global server, maintained by the manufacturer of the system.\\
 
 We here list the pros and cons of having a decentralized server setup versus centralized server setup.\fixme{kilde}\\
 
@@ -51,8 +51,7 @@ We here list the pros and cons of having a decentralized server setup versus cen
 Pros:
 \begin{itemize}
 	\item Maintains proper functionality even if the internet connection out of the house is broken.
-  \item Every person can edit the base code
-  \item Could be integrated in a Smart Home setup
+	\item Could be integrated in a Smart Home setup
 \end{itemize}
 
 Cons:
@@ -73,9 +72,9 @@ Pros:
 Cons:
 \begin{itemize}
 	\item If the internet connection malfunctions for what ever reason, the system will not work optimally.
-  \item The user is limited to the functionality we offer
+  \item The user is limited to the functionality that is offered
 \end{itemize}
 
-As can be seen by the lists, most pros in the central setup is cons in the decentralized setup and vice verse.\\
-This project focuses on developing a user friendly and upgradable system, and therefore a centralized server setup has been chosen. The centralized system offers the easiest way for users to get started and it also makes it easier to deal with problems. The only problem that a user can face, is the lack of internet connection or power, which in our modern time is unlikely for a considerable amount of time.\\
+As can be seen in the lists, most pros in the central setup is cons in the decentralized setup and vice verse.\\
+This project focuses on developing a user friendly and upgradeable system, and therefore a centralized server setup has been chosen. The centralized system offers the easiest way for users to get started and it also makes it easier to deal with problems. The only problem that a user can face, is the lack of internet connection or power, which in our modern time is unlikely for a considerable amount of time.\\
 Also the user would never have to do anything to keep their system up to date, since this would be handled on the server side.
