--- a/report/text/ArduinoDesign.tex
+++ b/report/text/ArduinoDesign.tex
@@ -4,7 +4,7 @@ The prototype is designed to prove the concept of the requirements to direct the
 
 \begin{figure}[h]
 	\centering
-		\includegraphics{images/arduinoFlowchart.png}
+		\includegraphics[width=1.50\textwidth, angle=90]{images/arduinoFlowchart.png}
 	\caption{Simple Flowchart of Arduino}
 	\label{fig:arduinoFlowchart}
 \end{figure}
